<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:ads="http://schemas.android.com/apk/res-auto"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical"
                android:background="#FFFFFF"
                android:padding="10dip">

    <TextView
        android:id="@+id/textViewErrorText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:textColor="#FF0000"
        android:text="Error in data entry"
        android:visibility="invisible"
        />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewErrorText"
        android:layout_marginTop="10dp"
        android:layout_above="@+id/adView">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/editTextName"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:inputType="textPersonName"
                android:hint="@string/enter_your_name"
                android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ"/>

            <EditText
                android:id="@+id/editTextCity"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/editTextName"
                android:layout_marginTop="10dp"
                android:inputType="textPersonName"
                android:hint="@string/town_city"
                android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789"/>


            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/editTextCity"
                android:layout_marginTop="10dp"
                android:inputType="textEmailAddress|textNoSuggestions|textVisiblePassword"
                android:hint="@string/email_address"
                />

            <EditText
                android:id="@+id/editTextConfirmEmail"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/editTextEmail"
                android:layout_marginTop="10dp"
                android:inputType="textEmailAddress|textNoSuggestions|textVisiblePassword"
                android:longClickable="false"
                android:hint="@string/confirm_email"
                />

            <EditText
                android:id="@+id/editTextPin"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/editTextConfirmEmail"
                android:layout_marginTop="10dp"
                android:inputType="numberPassword"
                android:hint="@string/enter_pin"
                />

            <EditText
                android:id="@+id/editTextConfirmPin"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/editTextPin"
                android:layout_marginTop="10dp"
                android:inputType="numberPassword"
                android:hint="@string/confirm_pin"
                />

            <TextView
                android:id="@+id/textViewNote"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/editTextConfirmPin"
                android:layout_marginTop="10dp"
                android:textSize="12sp"
                android:textColor="#aea8a1"
                android:text="@string/registration_note"
                />

            <TextView
                android:id="@+id/textViewOptionalHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/textViewNote"
                android:layout_marginTop="10dp"
                android:textSize="16sp"
                android:textColor="@color/colorPrimaryDark"
                android:text="@string/optional_header"
                />

            <TextView
                android:id="@+id/textViewOptionalDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/textViewOptionalHeader"
                android:layout_marginTop="10dp"
                android:textSize="12sp"
                android:textColor="#aea8a1"
                android:text="@string/optional_note"
                />

            <EditText
                android:id="@+id/editTextAddressLine1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_below="@+id/textViewOptionalDetails"
                android:inputType="textPostalAddress"
                android:hint="House No, Apartment or Area Name etc"
                />

            <EditText
                android:id="@+id/editTextAddressLine2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/editTextAddressLine1"
                android:inputType="textPostalAddress"
                android:hint="Landmark, road name etc"
                />

            <TextView
                android:id="@+id/textViewState"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_below="@+id/editTextAddressLine2"
                android:text="State:" />

            <Spinner
                android:id="@+id/spinnerState"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/textViewState"
                android:entries="@array/indian_states"
                />

            <EditText
                android:id="@+id/editTextPincode"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/spinnerState"
                android:inputType="number"
                android:maxLength="6"
                android:hint="Pincode"
                />

            <EditText
                android:id="@+id/editTextMobileNumber"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/editTextPincode"
                android:inputType="number"
                android:maxLength="15"
                android:hint="Mobile Number"
                />

            <Button
                android:id="@+id/buttonRegister"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:layout_centerHorizontal="true"
                android:text="@string/register"
                android:textColor="#FFFFFF"
                android:background="#000000"
                android:layout_below="@+id/editTextMobileNumber"
                android:onClick="onClickRegisterUser"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        </RelativeLayout>
    </ScrollView>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="10dp"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="@string/admob_banner_adunitid">
    </com.google.android.gms.ads.AdView>

</RelativeLayout>