<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FFFFFF">

    <TextView
        android:id="@+id/textViewChapterRange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/your_score" />
    
    <TextView
        android:id="@+id/textViewScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewChapterRange"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text=""
        android:textSize="40sp"/>

     <Button
        android:id="@+id/buttonStartRevision"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:text="@string/take_revision"
        android:textColor="@color/colorWhite"
        android:layout_above="@+id/buttonBackToQuestionSets"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"
        android:background="@drawable/rounded_button_dark_grey"/>

    <Button
        android:id="@+id/buttonBackToQuestionSets"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:text="@string/back_to_question_sets"
        android:textColor="@color/colorWhite"
        android:layout_above="@+id/buttonExit"
        android:layout_alignLeft="@+id/buttonExit"
        android:layout_alignStart="@+id/buttonExit"
        android:layout_marginBottom="15dp"
        android:background="@drawable/rounded_button_dark_grey"/>

    <Button
        android:id="@+id/buttonExit"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/adView"
        android:layout_marginBottom="15dp"
        android:text="Exit App"
        android:textColor="@color/colorWhite"
        android:background="@drawable/rounded_button_dark_grey"
         />

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="@string/admob_banner_adunitid">
    </com.google.android.gms.ads.AdView>
</RelativeLayout>
