<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:ads="http://schemas.android.com/apk/res-auto"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical"
                android:background="#FFFFFF"
                android:padding="10dip">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true">


    <Button
        android:id="@+id/buttonNewRegistration"
        android:layout_width="150dp"
        android:layout_height="55dp"
        android:layout_marginTop="30dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentLeft="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/new_registration"
        android:textColor="#FFFFFF"
        android:background="@drawable/rounded_button_red"
        android:onClick="onClickNewRegistration"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/buttonUpdateRegistration"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:layout_below="@+id/buttonNewRegistration"
        android:layout_alignParentRight="true"
        android:layout_alignParentLeft="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/update_registration"
        android:textColor="#FFFFFF"
        android:background="@drawable/rounded_button_dark_grey"
        android:onClick="onClickUpdateRegistration"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    </RelativeLayout>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="@string/admob_banner_adunitid">
    </com.google.android.gms.ads.AdView>

</RelativeLayout>