<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical"
                android:background="@color/colorWhite"
                android:descendantFocusability="blocksDescendants"
                android:padding="0dp">

    <TextView
        android:id="@+id/textViewChapterNumber"
        android:layout_width="50dp"
        android:layout_height="120dp"
        android:layout_centerVertical="true"
        android:layout_alignParentTop="true"
        android:gravity="center_horizontal|center_vertical"
        android:background="@color/colorLightBlack"
        android:text="@string/number_1"
        android:textColor="@color/colorWhite"
        android:textSize="24sp"/>

    <TextView
        android:id="@+id/textViewSeparator"
        android:layout_width="2dp"
        android:layout_height="120dp"
        android:layout_alignParentTop="true"
        android:gravity="center_horizontal|center_vertical"
        android:layout_toRightOf="@+id/textViewChapterNumber"
        android:background="@color/colorWhite"
        android:layout_toEndOf="@+id/textViewChapterNumber" />

    <ImageView
        android:id="@+id/imageViewChapterImage"
        android:layout_width="100dp"
        android:layout_height="120dp"
        android:layout_toRightOf="@+id/textViewSeparator"
        android:background="@color/colorLightBlack"
        android:padding="5dp"
        android:gravity="center"
        android:contentDescription="@string/image"
        android:layout_toEndOf="@+id/textViewSeparator" />

    <TextView
        android:id="@+id/buttonChapterName"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_toRightOf="@+id/textViewSeparator"
        android:layout_toLeftOf="@+id/linearLayout"
        android:background="@color/colorLightBlack"
        android:gravity="center"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/number_system"
        android:layout_toEndOf="@+id/textViewSeparator"
        android:layout_toStartOf="@+id/linearLayout" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="120dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewMcq"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:text="MCQs"
            android:gravity="center"
            android:layout_weight="1"
            android:background="@color/mcqButtonColor"
            android:visibility="gone"
            android:textColor="@color/colorWhite"/>

        <TextView
            android:id="@+id/textViewVideos"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="Videos"
            android:gravity="center"
            android:background="@color/videoButtonColor"
            android:textColor="@color/colorPrimaryDark"/>
    </LinearLayout>
</RelativeLayout>